* (bug 6806, 6030) Added several global JS variables for article path, user name,
  page title, etc. 
* hooks registered with addOnloadHook are now called at the one of the html body
  by all skins.
* Split ajax aided search from core ajax framework. Use wgUseAjax to enable the
  framework and wgAjaxSearch to enable the suggest feature for the search box.

== Languages updated ==

* Albanian (sq)
* Belarusian (be)
* Bishnupriya (bpy) stub file
* Brazilian Portuguese (pt-br)
* Catalan (ca)
* Dutch (nl)
* English (en)
* French (fr)
* German (de)
* Hebrew (he)
* Hungarian (hu)
* Indonesian (id)
* Korean (ko)
* Polish (pl)
* Russian (ru)
* Telugu (te)

== Compatibility ==

MediaWiki 1.8 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

Several changes to the database have been made from 1.6:

* A new "langlinks" table tracks interlanguage links
* A new "filearchive" table stores information on deleted files
* A new "querycache_info" table stores information on query page updates

To ensure that these tables are filled with data, run refreshLinks.php after
the upgrade.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could
break. Don't forget to always back up your database before upgrading!

See the file UPGRADE for more detailed upgrade instructions.



=== Caveats ===

Some output, particularly involving user-supplied inline HTML, may not
produce 100% valid or well-formed XHTML output. Testers are welcome to
set $wgMimeType = "application/xhtml+xml"; to test for remaining problem
cases, but this is not recommended on live sites. (This must be set for
MathML to display properly in Mozilla.)


For notes on 1.5.x and older releases, see HISTORY.


=== Online documentation ===
